name:                garden-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/garden-hs#readme
license:             BSD3
license-file:        LICENSE
author:              daniel clarke
maintainer:          clarkenciel@gmail.com
copyright:           2018 daniel clarke
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable garden-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       ansi-terminal >=0.8 && < 0.9
                     , base >= 4.7 && < 5
                     , MonadRandom >= 0.5 && < 0.6
                     , containers >= 0.5 && < 0.6
                     , text >= 1.2.3 && < 1.2.4
                     , uuid >= 1.3.13 && < 1.4
